dropDatabase after step down can cause fassert

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.6.3, 3.7.1
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • Repl 2018-01-01, Repl 2018-01-15
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If there is a step down, we return early and fail, but we never take the database out of the "drop pending" state. Thus if a new dropDatabase oplog entry comes in after the step down, it can cause an error in oplog application and a crash.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Judah Schvimer
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: