SERVER-32402 reset Database drop pending state upon step down after dropping collections